style.css
/*General styles*******************************************************************************/
html{
    background-color: black; /*Declares background color for page margins*/
}

body {
    font-family: "Trebuchet MS", arial, sans-serif;
    
}

p
{
    line-height: 1.8;
    font-size: 16px;
}
@media screen and (max-width: 600px) { p { font-size: 16px;} }
@media screen and (max-width: 1024px) { p { font-size: 20px;} }

/*Link styles*/
a {
    color: black;
}

a:hover {
    color: darkgray;
}

h1 /*used solely for website title*/
{
    font-family: "Lucida Console", Monospaced, sans-serif;
    font-size: 45px;
    text-shadow: 3px 3px 3px darkblue;
    width: 80%;
    text-align: center;
    margin: auto;
    padding: 0.5em;
}
@media screen and (max-width: 600px) { h1 { font-size: 28px}}

h2
{
    font-size: 28px;
    padding-top: 0.5em;
    border-top: 0.2em solid #f2f28d;
    font-family: "Lucida Console", Monospaced, sans-serif;
}
@media screen and (max-width: 600px) { h2 { font-size: 24px}}

h3
{
    font-size: 24px;
    border-top: 0.1em solid #f2f28d;
    padding-top: 0.5em;
    font-family: "Lucida Console", Monospaced, sans-serif;
}
@media screen and (max-width: 600px) { h3 { font-size: 22px}}

h4
{
    font-family: "Lucida Console", Monospaced, sans-serif;
    font-size: 20px;
}
@media screen and (max-width: 600px) { h4 { font-size: 18px}}

br {
    display: none;
}
@media screen and (max-width: 600px) { br { display: block; }}

/*List styles*****************************************************************************************************/
li {
    margin-bottom: 0.5em;
    list-style-image: url("images/triangle.png"); /*Uses a custom icon for bullet points*/
    line-height: 1.8;
    font-size: 16px;
}
@media screen and (max-width: 600px) { li { font-size: 16px;} }

/*Table styles********************************************************************************************/
table {
    max-width: 100%; /*forces table to span entire content container*/
    text-align: left;
    border-collapse: collapse; /*prevents gaps between table cells*/
    margin-bottom: 1em;
}

td, th {
    border: 0.15em solid black;
    padding: 0.2em;
}

th {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    background-color: dodgerblue;   /*Sets first row (the header) to blue*/
    color: white;
}

tr:nth-child(odd) {
    background-color: lightgray; /*Sets every other table row to grey*/
}

tr:nth-child(even) {
    background-color: white; /*Sets every other table row to white*/
}

/*Main content container styles************************************************************************/
.container { /*sets up page container*/
    display: grid;
    grid-template-areas: /*declares matrix indicating where subclasses are arranged*/
    "header"
    "topnav"
    "content"
    "footer";
    grid-template-columns: 1fr;
    max-width: 100%;
    background-color: black;
    border: 0.2em ridge white;
}
.container > div.header {   /*Page header style*/
    grid-area: header;
    text-align: center;
    font-size: 2em;
    background-color: dodgerblue;
    color: white;
    border-bottom: 0.2em ridge royalblue;
}
.container > div.menu { /*Table of contents style*/
    grid-area: menu;
    background-color: indianred;
    color: black;
    padding-left: 1em;
    padding-right: 1em;
    font-size: 1em;
    border-right: 0.2em ridge #c33c3c;
}
/* Style the navigation menu */
.container > div.topnav {
    overflow: hidden;
    background-color: indianred;
    color: black;
    font-size: 17px;
    border-bottom: 0.2em ridge #c33c3c;
}

/* Style navigation menu links */
.topnav a {
    color: white;
    padding: 14px 16px;
    float: left;
    text-align: center;
    text-decoration: none;
    font-size: 17px;
    display: block;
}

/* Style the hamburger menu */
.topnav .menu-icon {
    display: none;
}

/* Add a grey background color on mouse-over */
.topnav a:hover {
    background-color: darkred;
    color: white;
}

/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
@media screen and (max-width: 600px) {
    .topnav > a:not(:first-child) {display: none;}
    .topnav > a.menu-icon {
        float: right;
        display: block;
    }
}

/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
@media screen and (max-width: 600px) {
    .topnav.responsive {position: relative;}
    .topnav.responsive > .menu-icon {
        position: absolute;
        right: 0;
        top: 0;
    }
    .topnav.responsive > a {
        float: none;
        display: block;
        text-align: left;
    }
}

/* Style the active link (or home/logo) */
.active {
    background-color: darkred;
    color: white;
}
.container > div.content {  /*Main page content style*/
    grid-area: content;
    background-color: lightgoldenrodyellow;
    color: black;
    padding-left: 1em;
    padding-right: 1em;
    min-height: 70vh;
}
.container > div.footer {   /*Footer style*/
    grid-area: footer;
    background-color: dodgerblue;
    text-align: center;
    font-size: 0.8em;
    color: white;
    border-top: 0.2em ridge royalblue;
    padding: 10px;
}


/*Quiz styles*****************************************************************************/
.question-header
{
    font-size: 1.2em;
    font-weight: bold;
    padding-top: 0.5em;
    border-top: 0.2em solid #f2f28d;
}

.option, .textfield {
    background-color: #f7f7bb;
    border: 0.1em #f2f28d groove;
    padding: 0.5em;
    margin-top: 0.5em;
    max-width: 40em;
}

.option:hover, .textfield:hover {
    background-color: #f2f28d;
    border: 0.1em #eded5e groove;
    padding: 0.5em;
    margin-top: 0.5em;
    max-width: 40em;
}

.option-correct, .textfield-correct
{
    background-color: #90ee90;
    border: 0.1em #65e765 groove;
    padding: 0.5em;
    margin-top: 0.5em;
    max-width: 40em;
    font-weight: bold;
}

.option-incorrect, .textfield-incorrect
{
    background-color: #e19d9d;
    border: 0.1em #d57676 groove;
    padding: 0.5em;
    margin-top: 0.5em;
    max-width: 40em;
}

.quiz-button
{
    background-color: #f2f28d;
    border: 0.1em #eded5e groove;
    font-size: 1em;
    font-weight: bold;
    padding: 0.5em;
    margin-bottom: 0.5em;
}

.quiz-button:hover
{
    background-color: #eded5e;
    border: 0.1em #e8e830 groove;
    font-size: 1em;
    font-weight: bold;
    padding: 0.5em;
    margin-bottom: 0.5em;
}

.quiz-result
{
    font-size: 0.8em;
    font-style: italic;
    margin-bottom: 0.5em;
}

